secure checkout redirection

--- a/src/i18n/dictionaries/ar.json
+++ b/src/i18n/dictionaries/ar.json
@@ -1,5 +1,5 @@
 {
-    "HOME": {
+    "INVALID_SECURE_CHECKOUT_PAGE": {
       "title": "مرحبا بكم في تطبيقنا",
       "description": "هذه الصفحة هي الصفحة الرئيسية لتطبيقنا."
     }
