--- a/src/i18n/dictionaries/en.json
+++ b/src/i18n/dictionaries/en.json
@@ -1,5 +1,5 @@
 {
-  "HOME": {
+  "INVALID_SECURE_CHECKOUT_PAGE": {
     "title": "Welcome to the Home Page",
     "description": "This is the home page of our application."
   }
