--- a/src/i18n/dictionaries/ar.json
+++ b/src/i18n/dictionaries/ar.json
@@ -12,7 +12,8 @@
       "grandTotalPrice": "المجموع الكلي",
       "completeOrder": "اكمل الطلب",
       "currency": "درهم",
-      "free_label": "مجانا"
+      "free_label": "مجانا",
+      "securePayment": "إن عملية الدفع الآمنة لدينا مشفرة بنسبة 100% وتفاصيلك الشخصية آمنة."
     }
   }
   
