--- a/src/i18n/dictionaries/en.json
+++ b/src/i18n/dictionaries/en.json
@@ -12,6 +12,7 @@
     "grandTotalPrice": "Grand Total",
     "completeOrder": "Complete Order",
     "currency": "AED",
-    "free_label": "Free"
+    "free_label": "Free",
+    "securePayment": "Our secure checkout is 100% encrypted and your personal details are safe."
   }
 }
