--- a/src/i18n/dictionaries/ar.json
+++ b/src/i18n/dictionaries/ar.json
@@ -13,7 +13,18 @@
       "completeOrder": "اكمل الطلب",
       "currency": "درهم",
       "free_label": "مجانا",
-      "securePayment": "إن عملية الدفع الآمنة لدينا مشفرة بنسبة 100% وتفاصيلك الشخصية آمنة."
+      "securePayment": "إن عملية الدفع الآمنة لدينا مشفرة بنسبة 100% وتفاصيلك الشخصية آمنة.",
+      "personalInfo": "معلومات شخصية",
+      "shippingAndBillingAddress": "عنوان الشحن والفواتير",
+      "deliveryOptions": "خيارات التوصيل",
+      "paymentOptions": "خيارات الدفع",
+      "loginLabel": "تسجيل الدخول",
+      "emailLabel": "البريد الالكتروني",
+      "passwordLabel": "كلمة المرور",
+      "loginDescription": "لوريم ايبسوم هو ببساطة نص شكلي (بمعنى ان الكتاب يحتوي على متين يدعم الطباعة) لتعبئة كتاب ",
+      "continueAsGuest": "استمر كزائر",
+      "guestUserDescription": "لوريم ايبسوم هو ببساطة نص شكلي (بمعنى ان الكتاب يحتوي على متين يدعم الطباعة) لتعبئة كتاب ",
+      "continueLabel": "استمر"
     }
   }
   
