--- a/src/i18n/dictionaries/ar.json
+++ b/src/i18n/dictionaries/ar.json
@@ -11,6 +11,7 @@
     "shippingPrice": "الشحن",
     "grandTotalPrice": "المجموع الكلي",
     "completeOrder": "اكمل الطلب",
+    "completePayment": "اكمل الدفع",
     "currency": "درهم",
     "free_label": "مجانا",
     "securePayment": "إن عملية الدفع الآمنة لدينا مشفرة بنسبة 100% وتفاصيلك الشخصية آمنة.",
