--- a/src/i18n/dictionaries/en.json
+++ b/src/i18n/dictionaries/en.json
@@ -11,6 +11,7 @@
     "shippingPrice": "Shipping",
     "grandTotalPrice": "Grand Total",
     "completeOrder": "Complete Order",
+    "completePayment": "Complete Payment",
     "currency": "AED",
     "free_label": "Free",
     "securePayment": "Our secure checkout is 100% encrypted and your personal details are safe.",
